k8s-manifests/06-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: three-tier-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: my-app-sa
      containers:
      - name: api
        # Sostituisci <IL_TUO_USERNAME_DOCKERHUB> con il tuo username (es. oxiys)
        image: oxiys/three-tier-api:latest 
        ports:
        - containerPort: 5001
