k8s-manifests/05-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: three-tier-app
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
