k8s-manifests/09-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: three-tier-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
  type: ClusterIP # Permette l'accesso esterno su cloud provider
